alignment fix

--- a/src/style.css
+++ b/src/style.css
@@ -167,12 +167,17 @@ p {
 
 ul,
 ol {
-  margin-left: var(--spacing-5);
+  margin-left: var(--spacing-0);
   margin-right: var(--spacing-0);
   padding: var(--spacing-0);
   margin-bottom: var(--spacing-8);
   list-style-position: outside;
   list-style-image: none;
+}
+
+section ul,
+section ol {
+  margin-left: var(--spacing-5);
 }
 
 ul li,
@@ -196,7 +201,7 @@ li > ul {
 
 blockquote {
   color: var(--color-text-light);
-  margin-left: calc(-1 * var(--spacing-6));
+  margin-left: calc(-1 * var(--spacing-0));
   margin-right: var(--spacing-8);
   padding: var(--spacing-5) var(--spacing-0) var(--spacing-5) var(--spacing-6);
   border-left: var(--spacing-1) solid var(--color-primary);
